1.17 -> 2.0:
    - devzero2000: fix the configmake.h make rule: update its timestamp also if it don't change.
    - devzero2000: revert bad commit: add missing glob.h and fnmatch.h in configure.ac, add struct sb in poptconfig.c
    - devzero2000: Rewrite the logic in poptReadDefaultConfig 
      for finding the popt alias file
    - devzero2000: update .cvsignore
    - devzero2000: fix compiler warning [-Wuninitialized]
    - jbj: i18n: update po files (Translation Project).
    - devzero2000: add version-script linker capability also for openindiana native ld
    - devzero2000: add test3 to the unit test, add color-tests automake option
    - devzero2000: add tdict to the unit test: augment make check with some tdict tests
    - devzero2000: add test2 to the unit test: augment make check with some test2 tests
    - devzero2000: fix: add missing automake per target test* LDFLAGS
    - devzero2000: require, as in autogen.sh, a minimal automake version for bootstrap 
    - devzero2000: added --enable-valgrind autoconf option
    - devzero2000: Fixed VPATH building with arbitrary directory structure
    - devzero2000: some minor fix to autofu and also a minor portability problem on AIX
      with the native compiler
    - devzero2000: add malloc vodo to testit.sh
    - devzero2000: define build-gcov disabled by default
    - devzero2000: fix:  make check work again
    - jbj: remove llvm warning from s/int/size_t/.
    - jbj: bump version to 1.17.DEVEL.
    - jbj: tests: test-cases for UNWANTEDARGS (Wayne Davison<wayned@samba.org>).
    - jbj: wire-up almost all *alloc's with assertions.
    - jbj: rename (to shorten) internal con->av[con->ac:con->nav] variables.
    - jbj: fix: rescusitate --enable-build-gcov AutoFu.
    - jbj: start rewriting/simplifying argv routines.
    - jbj: allocate argv array as expected, not contiguously.
    - jbj: uncouple popt internals from poptSaveFoo(), use poptSaveArg().
    - jbj: return statck under/overflow errors.